--- a/src/com/v3pm_prototype/view/V3PMGUI.css
+++ b/src/com/v3pm_prototype/view/V3PMGUI.css
@@ -22,10 +22,18 @@
 	-fx-text-fill: #C84164;
 	-fx-font: 14px "System";
 }
+.Scenario1Titel {
+	-fx-text-fill: #C84164;
+	-fx-font: 15px "System";
+}
 
 .Scenario2 {
 	-fx-text-fill: #FBA71B;
 	-fx-font: 14px "System";
+}
+.Scenario2Titel {
+	-fx-text-fill: #FBA71B;
+	-fx-font: 15px "System";
 }
 
 .Scenario1Box {
