--- a/src/com/v3pm_prototype/view/SAProjectSuccess.fxml
+++ b/src/com/v3pm_prototype/view/SAProjectSuccess.fxml
@@ -80,8 +80,9 @@
                      <children>
                         <TableView fx:id="tvResults" prefHeight="193.0" prefWidth="420.0" HBox.hgrow="NEVER">
                           <columns>
-                            <TableColumn fx:id="clmParameter" prefWidth="133.0" text="Parameter" />
-                            <TableColumn fx:id="clmSD" prefWidth="286.0" text="Standard Deviation" />
+                            <TableColumn fx:id="clmParameter" prefWidth="84.0" text="Parameter" />
+                              <TableColumn fx:id="clmInitialValue" prefWidth="85.0" text="Initial Value" />
+                            <TableColumn fx:id="clmSD" prefWidth="227.0" text="Standard Deviation" />
                           </columns>
                         </TableView>
                      </children>
