--- a/src/com/v3pm_prototype/view/AddProject.fxml
+++ b/src/com/v3pm_prototype/view/AddProject.fxml
@@ -19,11 +19,11 @@
             <TextField fx:id="tfName" promptText="Project Name" />
          </children>
       </FlowPane>
-      <TitledPane animated="false" collapsible="false" text="General Infos" VBox.vgrow="ALWAYS">
+      <TitledPane animated="false" collapsible="false" text="General Information" VBox.vgrow="ALWAYS">
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0">
                <children>
-                  <Label layoutX="24.0" layoutY="17.0" text="Number of Periods" />
+                  <Label layoutX="24.0" layoutY="17.0" text="Project Length (Periods)" />
                   <Label layoutX="237.0" layoutY="17.0" text="Type" />
                   <Label layoutX="393.0" layoutY="17.0" text="Affected Process" />
                   <TextField fx:id="tfPeriods" layoutX="24.0" layoutY="39.0" prefWidth="120.0" text="1" />
@@ -53,7 +53,7 @@
                      <children>
                         <Label layoutX="14.0" layoutY="4.0" prefHeight="17.0" prefWidth="224.0" text="Effect on process spec. Operating Otflows" />
                         <TextField fx:id="tfA" layoutX="14.0" layoutY="31.0" prefWidth="120.0" promptText="e.g. 0.95" />
-                        <ToggleButton fx:id="tbA" layoutX="140.0" layoutY="31.0" mnemonicParsing="false" text="is relative" />
+                        <ToggleButton fx:id="tbA" layoutX="140.0" layoutY="31.0" mnemonicParsing="false" selected="true" text="is relative" />
                      </children>
                   </AnchorPane>
                   <AnchorPane fx:id="apB" maxHeight="-Infinity" minHeight="0.0" minWidth="0.0" prefWidth="504.0">
@@ -66,14 +66,14 @@
                      <children>
                         <Label layoutX="14.0" layoutY="4.0" prefHeight="17.0" prefWidth="277.0" text="Effect on process spec. time" />
                         <TextField fx:id="tfE" layoutX="14.0" layoutY="31.0" prefWidth="120.0" promptText="e.g. 0.87" />
-                        <ToggleButton fx:id="tbE" layoutX="140.0" layoutY="31.0" mnemonicParsing="false" text="is relative" />
+                        <ToggleButton fx:id="tbE" layoutX="140.0" layoutY="31.0" mnemonicParsing="false" selected="true" text="is relative" />
                      </children>
                   </AnchorPane>
                   <AnchorPane fx:id="apU" maxHeight="-Infinity" minHeight="0.0" minWidth="0.0" prefWidth="504.0">
                      <children>
                         <Label layoutX="14.0" layoutY="4.0" prefHeight="17.0" prefWidth="277.0" text="Effect on process spec. quality" />
                         <TextField fx:id="tfU" layoutX="14.0" layoutY="31.0" prefWidth="120.0" promptText="e.g. 1.05" />
-                        <ToggleButton fx:id="tbU" layoutX="140.0" layoutY="31.0" mnemonicParsing="false" text="is relative" />
+                        <ToggleButton fx:id="tbU" layoutX="140.0" layoutY="31.0" mnemonicParsing="false" selected="true" text="is relative" />
                      </children>
                   </AnchorPane>
                   <AnchorPane fx:id="apM" maxHeight="-Infinity" minHeight="0.0" minWidth="0.0" prefWidth="504.0">
