--- a/src/com/v3pm_prototype/view/TabScenarioCalculation.fxml
+++ b/src/com/v3pm_prototype/view/TabScenarioCalculation.fxml
@@ -242,19 +242,29 @@
                         <Insets bottom="10.0" />
                      </VBox.margin>
                   </VBox>
+                  <HBox>
+                     <children>
+                        <Label maxHeight="1.7976931348623157E308" text="Filter by Project: " />
+                        <ChoiceBox fx:id="cbProject" nodeOrientation="LEFT_TO_RIGHT" prefWidth="200.0" />
+                     </children>
+                     <VBox.margin>
+                        <Insets bottom="4.0" />
+                     </VBox.margin>
+                  </HBox>
                   <TableView fx:id="tvRoadmap" maxHeight="1.7976931348623157E308" minHeight="100.0" VBox.vgrow="ALWAYS">
                     <columns>
                       <TableColumn fx:id="clmRoadmap" prefWidth="265.0" text="Roadmap" />
                       <TableColumn fx:id="clmNPV" minWidth="50.0" text="NPV" />
                     </columns>
                   </TableView>
-                  <Button alignment="CENTER" mnemonicParsing="false" onAction="#openSAProjectSuccessTab" text="Project Sucess Analysis" />
+                  <Label fx:id="lblAmountRoadmaps" alignment="CENTER" maxWidth="1.7976931348623157E308" text="0 Roadmaps have been generated." />
+                  <Button alignment="CENTER" mnemonicParsing="false" onAction="#openSAProjectSuccessTab" text="Project Sucess Analysis">
+                     <VBox.margin>
+                        <Insets top="4.0" />
+                     </VBox.margin></Button>
                </children>
             </VBox>
          </content>
-         <graphic>
-            <ChoiceBox fx:id="cbProject" nodeOrientation="LEFT_TO_RIGHT" prefHeight="39.0" prefWidth="200.0" />
-         </graphic>
          <HBox.margin>
             <Insets bottom="14.0" right="14.0" top="14.0" />
          </HBox.margin>
