--- a/src/com/v3pm_prototype/view/ScenarioComparison.fxml
+++ b/src/com/v3pm_prototype/view/ScenarioComparison.fxml
@@ -196,7 +196,7 @@
             <Insets top="6.0" />
          </VBox.margin>
       </Label>
-      <Label styleClass="Titel2" text="Process Development Delta:">
+      <Label styleClass="Titel2" text="Process Performance Delta:">
          <VBox.margin>
             <Insets bottom="10.0" />
          </VBox.margin>
@@ -246,7 +246,7 @@
                         <Insets top="20.0" />
                      </VBox.margin>
                   </Label>
-                  <Label styleClass="Titel2" text="Broken Restrictions per Scenario:">
+                  <Label styleClass="Titel2" text="Violated Restrictions per Scenario:">
                      <padding>
                         <Insets bottom="10.0" />
                      </padding>
